workspace(name = "leveldb")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

new_git_repository(
    name = "com_google_googletest",
    build_file = "//:thirdparties/gmock.BUILD",
    remote = "https://github.com/google/googletest",
    tag = "release-1.12.1",
)

bind(
    name = "gtest",
    actual = "@com_google_googletest//:gtest",
)